--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta  charset="UTF-8">
-        <title></title>
+        <title>Sustainability Infographic</title>
         <script>
 
         </script>
