commit -m "added title and test"

--- a/template.html
+++ b/template.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta  charset="UTF-8">
-        <title></title>
+        <title>Sustainability Infographic</title>
         <script>
 
         </script>
     </head>
     <body>
 
-        <div></div>
+        <div>test</div>
 
 
         
