commit -m "initial html finished"

--- a/template.html
+++ b/template.html
@@ -7,10 +7,61 @@
 
         </script>
     </head>
+
     <body>
 
-        <div>test</div>
+        <div id="main">
+            <section class="question waterQues">
+                <h3>How much water is needed to make this pair of jeans?</h3>
 
+                <div class="info_back"></div>
+
+                <div class ="row">
+                    <ul>
+                        <li>20L</li>
+                        <li>200L</li> 
+                        <li>2,000L</li>
+                        <li>20,000L</li>
+                    </ul>
+                </div>
+
+                <div class="correctAns off">Correct!</div>
+            </section> <!--water consumption question-->
+
+            <section class="wrongAns off">
+                <h2>Oops! Wrong Answer, Please Try Again!</h2>
+                <a href=".waterQues" target="_self">
+                    <img src="images/info_girl_sad.svg" alt="wrong answer"/>
+                    <p>Click me to try again!</p>
+                </a>
+            </section> <!--wrong answer-->
+
+            <section class="question decompQues">
+                <h3>Approximately how many years do you think it takes for synthetic clothes to break down?</h3>
+
+                <div class="info_back"></div>
+
+                <div class ="row">
+                    <ul>
+                        <li>~50 Years</li>
+                        <li>~100 Years</li> 
+                        <li>~200 Years</li>
+                        <li>~500 Years</li>
+                    </ul>
+                </div>
+
+                <div class="correctAns off">Correct!</div>
+            </section> <!--water consumption question-->
+            
+            <section class="wrongAns off">
+                <h2>Oops! Wrong Answer, Please Try Again!</h2>
+                <a href=".decompQues" target="_self">
+                    <img src="images/info_girl_sad.svg" alt="wrong answer"/>
+                    <p>Click me to try again!</p>
+                </a>
+            </section> <!--wrong answer-->
+
+        </div>
 
         
     </body>
