first real commit

--- a/home.html
+++ b/home.html
@@ -2,5 +2,19 @@
 <html>
     <head>
         <title>Sustainability Infographic</title>
+        <link href="home.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
 </html>
+<body>
+    <div id="main">
+        <div id="frontpage">
+            <img id="logoimg" src="fashion-recycle.png">
+            <p class="slogan">THE IMPACT OF</p>
+            <img id="titleimg" src="largetextlogo.png">
+            <p class="slogan">FAST FASHION</p>
+
+        </div>
+    </div>
+</body>
