first page competed

--- a/home.html
+++ b/home.html
@@ -12,9 +12,10 @@
         <div id="frontpage">
             <img id="logoimg" src="fashion-recycle.png">
             <p class="slogan">THE IMPACT OF</p>
-            <img id="titleimg" src="largetextlogo.png">
-            <p class="slogan">FAST FASHION</p>
-
+            <img id="titleimg" src="fastfashion.svg">
+            <p class="slogan">ON OUR ENVIRONMENT</p>
+            <img id="scrollarrows" src="scroll.svg">
+            <p id="scrolltext">Scroll Down</p>
         </div>
     </div>
 </body>
