details done, but thread not working lol

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
         <link href="home.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/coc7qmq.css">
     </head>
 </html>
 <body>
@@ -16,6 +17,31 @@
             <p class="slogan">ON OUR ENVIRONMENT</p>
             <img id="scrollarrows" src="scroll.svg">
             <p id="scrolltext">Scroll Down</p>
+        </div>
+        <br>
+        <img id="whatisit" src="what is it.png">
+        <div id="description">
+            <br>
+            <div id="box">
+                <p id="details">
+                Producing fast fashion items is<br>
+                    to get as many products as<br>
+                    they can into the market quickly.<br>
+                    It means that caring about the<br>
+                    environment, and the effects they<br>
+                    have on it don’t play a part.<br>
+                     <br>
+                    Here is a list of ways the fast<br>
+                    fashion industry is causing issues<br>
+                    on our environment.</p>
+            </div>
+            <div id="clothes">
+                <img id="pile" src="pileofclothes.svg">
+            </div>
+        </div>
+        <div id="thread">
+            <img id="threadroll" src="thread roll.svg">
+            <p id="unwind">Click the thread to unwind information</p>
         </div>
     </div>
 </body>
