--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/coc7qmq.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Giga&display=swap" rel="stylesheet">
     </head>
 </html>
 <body>
@@ -13,35 +15,74 @@
         <div id="frontpage">
             <img id="logoimg" src="fashion-recycle.png">
             <p class="slogan">THE IMPACT OF</p>
-            <img id="titleimg" src="fastfashion.svg">
+            <img src="fastfashion.svg">
             <p class="slogan">ON OUR ENVIRONMENT</p>
             <img id="scrollarrows" src="scroll.svg">
-            <p id="scrolltext">Scroll Down</p>
+            <p>Scroll Down</p>
         </div>
         <br>
-        <img id="whatisit" src="what is it.png">
+        <img id="whatisit" src="what is it 2.svg">
         <div id="description">
             <br>
             <div id="box">
                 <p id="details">
-                Producing fast fashion items is<br>
-                    to get as many products as<br>
-                    they can into the market quickly.<br>
-                    It means that caring about the<br>
-                    environment, and the effects they<br>
-                    have on it don’t play a part.<br>
+                Producing fast fashion items is
+                    to get as many products as
+                    they can into the market quickly.
+                    This means that caring about the
+                    environment, and the effects they
+                    have on it don’t play a part.
                      <br>
-                    Here is a list of ways the fast<br>
-                    fashion industry is causing issues<br>
+                     <br>
+                    Here is a list of ways the fast
+                    fashion industry is causing issues
                     on our environment.</p>
             </div>
             <div id="clothes">
                 <img id="pile" src="pileofclothes.svg">
             </div>
         </div>
-        <div id="thread">
-            <img id="threadroll" src="thread roll.svg">
+        <div class="flex flex-row" id="thread">
+            <img src="thread roll.svg">
+        <div id="unwindinfo">
             <p id="unwind">Click the thread to unwind information</p>
+        </div>
+    </div>
+    <div id="arrow">
+        <img id="redarrow" src="red arrow.svg">
+    </div>
+        <div id="clothing-waste">
+            <h1>clothing waste</h1>
+            <p id="sub-heading">in North America,</p>
+        </div>
+
+        <div id="garbage" class="flex flex-row">
+                <img src="clothing garbage illustration.svg">
+                <div id="garbage-info">
+                <p id="clothing-info">10,000<br> million kg</p>
+                <p id="clothing-small-info">of clothing<br> is thrown away<br> each year.</p>
+                </div>
+        </div>
+        <div>
+            <p>and</p>
+            <p id="percent">95%</p>
+            <p>could have been</p>
+        </div>
+        <div class="flex flex-row" id="re-n-re">
+            <div id="repurposed">
+                <p class="r-n-r">repurposed</p>
+                <img src="Repurpose icon.svg">
+            </div>
+
+            <div>
+                <p id="or">or</p>
+            </div>
+
+            <div id="recycle">
+                <p class="r-n-r">recycle</p>
+                <img src="recycle (1) 2.svg">
+            </div>
+
         </div>
     </div>
 </body>
