--- a/lastpage.html
+++ b/lastpage.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div id=main>
-        <img src="images 2/multiple t-shirt.png">
+        <img class="spacing"src="images 2/multiple t-shirt.png">
         <p class="boldText1">UP TO 200 YEARS</p>
         <p>It takes up to 200 years to <br> break down one piece of <br>
         synthetic clothing</p>
@@ -32,10 +32,10 @@
         <p class="boldText2">This could impact our <br>health if one were to <br>
             breathe/consume a lot of <br> microfibers and toxins in <br>
         their lifetime.</p>
-        <h1>how to reduce <br>environmental <br>impact</h1>
-        <div id="world">
-            <img id="glodeImage" src="images 2/globe.png">
-            <img id="arrowImage" src="images 2/recycle-arrows.png">
+        <h1 class="spacing2">how to reduce <br>environmental <br>impact</h1>
+        <div class="world">
+            <img class="arrowImage" src="images 2/recycle-arrows.png">
+            <img class="globeImage" src="images 2/globe.png">
         </div>
         <h2>1. buy clothes from <br>sustainable brands</h2>
         <img id="lightbulb" src="images 2/lightbulb.png">
@@ -45,10 +45,10 @@
         <img class="icon" src="images 2/thinker.png">
         <h2>4. reduce the <br>amount of times you<br>do your laundry</h2>
         <img class="icon" src="images 2/laundry.png">
-        <h2>And</h2>
-        <h1>USE <br> OUR APP</h1>
+        <h2 class="spacing3">And</h2>
+        <h1 class="spacing4">USE <br> OUR APP</h1>
         <img id="reVamp" src="images 2/girl-speechbubble.png">
-        <h3>Let's make the world a <br>better place!</h3>
+        <h3 class="spacing5">Let's make the world a <br>better place!</h3>
         </div>
     
     </body>
