pretty much done

--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
                 <img src="Repurpose icon.svg">
             </div>
 
-            <div>
+            <div id="or-text">
                 <p id="or">or</p>
             </div>
 
