--- a/home.html
+++ b/home.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+
         <title>Sustainability Infographic</title>
+        <link href="main.css" rel="stylesheet">
+
         <link href="home.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.typekit.net/coc7qmq.css">
+
+        <link rel="stylesheet" href="sadGirl-section.css">
+        <script src="sadgirl.js"></script>
+
+
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Giga&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     </head>
 </html>
-<body>
-    <div id="main">
-        <div id="frontpage">
-            <img id="logoimg" src="fashion-recycle.png">
+<body class="flex">
+    <div class="main flex flex-column">
+        <div id="frontpage" class="flex flex-column">
+            <img id="logoimg" src="a-images/recycle-logo.svg">
             <p class="slogan">THE IMPACT OF</p>
-            <img src="fastfashion.svg">
+            <img src="a-images/fastfashion.svg">
             <p class="slogan">ON OUR ENVIRONMENT</p>
-            <img id="scrollarrows" src="scroll.svg">
+            <img id="scrollarrows" src="a-images/scroll.svg">
             <p>Scroll Down</p>
         </div>
-        <br>
-        <img id="whatisit" src="what is it 2.svg">
-        <div id="description">
-            <br>
-            <div id="box">
+
+
+        <img id="whatisit" src="a-images/what is it 2.svg">
+        <div id="description" class="flex">
+            <div id="box" class="flex">
                 <p id="details">
                 Producing fast fashion items is
                     to get as many products as
@@ -38,18 +46,16 @@
                     fashion industry is causing issues
                     on our environment.</p>
             </div>
-            <div id="clothes">
-                <img id="pile" src="pileofclothes.svg">
-            </div>
+            <img id="pile" src="a-images/pileofclothess.svg">
         </div>
         <div class="flex flex-row" id="thread">
-            <img src="thread roll.svg">
+            <img src="a-images/thread roll.svg">
         <div id="unwindinfo">
             <p id="unwind">Click the thread to unwind information</p>
         </div>
     </div>
     <div id="arrow">
-        <img id="redarrow" src="red arrow.svg">
+        <img id="redarrow" src="a-images/red arrow.svg">
     </div>
         <div id="clothing-waste">
             <h1>clothing waste</h1>
@@ -57,10 +63,10 @@
         </div>
 
         <div id="garbage" class="flex flex-row">
-                <img src="clothing garbage illustration.svg">
-                <div id="garbage-info">
-                <p id="clothing-info">10,000<br> million kg</p>
-                <p id="clothing-small-info">of clothing<br> is thrown away<br> each year.</p>
+                <img src="a-images/clothing garbage illustration.svg">
+                <div class="flex-column">
+                    <p id="clothing-info" class="alignRight">10,000<br> million kg</p>
+                    <p id="clothing-small-info" class="alignRight">of clothing<br> is thrown away<br> each year.</p>
                 </div>
         </div>
         <div>
@@ -68,21 +74,47 @@
             <p id="percent">95%</p>
             <p>could have been</p>
         </div>
-        <div class="flex flex-row" id="re-n-re">
-            <div id="repurposed">
-                <p class="r-n-r">repurposed</p>
-                <img src="Repurpose icon.svg">
+        <div class="flex flex-row">
+            <div class="flex flex-column">
+                <p class="slightBold">repurposed</p>
+                <img src="a-images/Repurpose icon.svg">
             </div>
-
             <div id="or-text">
                 <p id="or">or</p>
             </div>
-
-            <div id="recycle">
-                <p class="r-n-r">recycle</p>
-                <img src="recycle (1) 2.svg">
+            <div class="flex flex-column">
+                <p class="slightBold">recycled</p>
+                <img src="a-images/recycle (1) 2.svg">
             </div>
-
         </div>
+
+        <!-- ============================================ -->
+
+        <div>
+            <p>Fast fashion spreads a message that if you wear clothes that are out of season, 
+                it means you're our of style.</p>
+            <div id="sadGirlSection" class="spacingMargin">
+                <div class="flex flex-row">
+                    <img class="thinkBubble" id="thinking" class="alignTopImg" src="c-images/thinking-bubble.svg" alt="thinking bubble">
+                    <img class="sadGirl" src="c-images/sad-girl.svg" alt="sad girl">
+                </div>
+                <div class="hidden" id="hide">
+                    <p id="text1">"that shirt<br> is so last <br>month"</p>
+                    <p id="text2">"eww"</p>
+                    <p id="text3">"when was <br>the last time <br>you bought <br>something <br>new?"</p>
+                </div>
+            </div>
+            <p>This encourages people to shop at fast fashion stores to buy the most up to date clothes,
+                and to discard their older items.</p>
+        </div>
+
+        
+
+
+
+
+
+
+
     </div>
 </body>
