added section 3 in

--- a/home.html
+++ b/home.html
@@ -11,8 +11,9 @@
         <link rel="stylesheet" href="sadGirl-section.css">
         <script src="sadgirl.js"></script>
 
+        <link href="frame3.css" rel="stylesheet"> 
 
-
+        
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Giga&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -20,6 +21,9 @@
 </html>
 <body class="flex">
     <div class="main flex flex-column">
+<!-- ====================================================================================
+                section a: starting page + beginning of clothing waste section
+======================================================================================-->
         <div id="frontpage" class="flex flex-column">
             <img id="logoimg" src="a-images/recycle-logo.svg">
             <p class="slogan">THE IMPACT OF</p>
@@ -65,13 +69,13 @@
         <div id="garbage" class="flex flex-row">
                 <img src="a-images/clothing garbage illustration.svg">
                 <div class="flex-column">
-                    <p id="clothing-info" class="alignRight">10,000<br> million kg</p>
+                    <p id="clothing-info" class="alignRight greyText">10,000<br> million kg</p>
                     <p id="clothing-small-info" class="alignRight">of clothing<br> is thrown away<br> each year.</p>
                 </div>
         </div>
         <div>
             <p>and</p>
-            <p id="percent">95%</p>
+            <p id="percent" class="greyText">95%</p>
             <p>could have been</p>
         </div>
         <div class="flex flex-row">
@@ -88,15 +92,16 @@
             </div>
         </div>
 
-        <!-- ============================================ -->
-
+<!-- ======================================================== 
+                section b: sad girl clickable section
+==========================================================-->
         <div>
             <p>Fast fashion spreads a message that if you wear clothes that are out of season, 
                 it means you're our of style.</p>
             <div id="sadGirlSection" class="spacingMargin">
                 <div class="flex flex-row">
-                    <img class="thinkBubble" id="thinking" class="alignTopImg" src="c-images/thinking-bubble.svg" alt="thinking bubble">
-                    <img class="sadGirl" src="c-images/sad-girl.svg" alt="sad girl">
+                    <img class="thinkBubble" id="thinking" class="alignTopImg" src="b-images/thinking-bubble.svg" alt="thinking bubble">
+                    <img class="sadGirl" src="b-images/sad-girl.svg" alt="sad girl">
                 </div>
                 <div class="hidden" id="hide">
                     <p id="text1">"that shirt<br> is so last <br>month"</p>
@@ -107,9 +112,41 @@
             <p>This encourages people to shop at fast fashion stores to buy the most up to date clothes,
                 and to discard their older items.</p>
         </div>
-
-        
-
+<!-- =============================================================
+                section c: start of water consumption section
+===============================================================-->
+        <h1>water <br> consumption</h1>
+        <div class="equalSection">
+            <p>The amount of water <br>used to make a cotton <br> t-shirt:</p>
+            <div class="flex flex-row spaceAround">
+                <img id="toRight" src="images/redshirt.svg">
+                <h2 class="equalSign" id="toLeft">=</h2>
+                <div class="flex flex-column">
+                    <img src="images/waterdroplet.svg">
+                    <p class="greyText"><b>2,700L <br>of water</b></p>
+                </div>
+            </div>
+        </div>
+        <div class="equalSection">
+            <p>The average amount of <br>water a person needs a <br>day:</p>
+            <div class="flex flex-row spaceAround">
+                <div class="flex flex-column">
+                    <img src="images/waterdroplet.svg">
+                    <p class="greyText"><b>3L <br>of water</b></p>
+                </div>
+                <h2 class="equalSign">=</h2>
+                <img src="images/girl-smile.svg">
+            </div>
+            <h2>therefore...</h2>
+            <div class="flex flex-row lastDiv">
+                <p>The amount of <br>water used on <br>a cotton t-shirt <br>can help save 
+                    many lives.</p>
+                <img src="images/group of girls.svg">
+            </div>
+        </div>
+<!-- =============================================
+                section d: quiz 1 - jeans
+==================================================-->
 
 
 
