--- a/question/index.html
+++ b/question/index.html
@@ -19,7 +19,7 @@
     <body>
         <div class="main flex">
             <div class="waterQues">
-                <section class="question column flex">
+                <section class="question column flex" id="jeansQuestion">
                     <h3 class="qHead qHeadW">How much water is needed to make this pair of jeans?</h3>
                     <div class="q_img">
                         <img src="images/icon_jeans.svg" alt="jeans">
@@ -45,7 +45,7 @@
                     <div id="correctAns1" class="correctAns off off1">Correct!</div>
                 </section> <!--water consumption question-->
     
-                <section id="wrongAns1" class="wrongAns column">
+                <section id="wrongAns1" class="wrongAns flex flex-column">
                     <h2 class="oops">Oops!<br>Wrong Answer,<br>Please Try Again!</h2>
                     <div class="sad_girl">
                         <img id="sad1" src="images/info_girl_sad.svg" alt="wrong answer"/>
