--- a/home.html
+++ b/home.html
@@ -158,7 +158,7 @@
 ==================================================-->
         <div class="waterQues">
             <section class="question flex-column flex" id="jeansQuestion">
-                <h3 class="qHead qHeadW">How much water is needed to make this pair of jeans?</h3>
+                <h3 class="qHead qHeadW"><b>How much water is needed to make this pair of jeans?</b></h3>
                 <div class="q_img">
                     <img class="quizImg" src="d-images/icon_jeans.svg" alt="jeans">
                 </div>
@@ -179,14 +179,43 @@
                 <h2 class="oops">Oops!<br>Wrong Answer,<br>Please Try Again!</h2>
                 <div class="sad_girl">
                     <img id="sad1" src="d-images/info_girl_sad.svg" alt="wrong answer"/>
-                    <p class="click_me">Click me to try again!</p>
+                    <p class="click_me"><b>Click me to try again!</b></p>
                 </div>
             </section> <!--wrong answer-->
         </div>
-<!-- =============================================
-                section e: quiz 1 - jeans
-==================================================-->
-        
+<!-- ===================================================================================
+                section e: end of water consumption, beginning of synthetic fibres
+=====================================================================================-->
+        <img src="e-images/water-droplets.svg" alt="water droplets from big to small">
+        <h2 class="bolded"><b>20,000L of Water</b></h2>
+        <p>is used to create <b>one</b> pair of jeans</p>
+        <div class="flex flex-row spacingMargin">
+            <img src="e-images/jeans.svg" alt="jeans with text saying approx. 450 million">
+            <p>jeans are sold in the US per year</p>
+        </div>
+        <p><b>thats</b></p>
+        <div class="spacingMargin">
+            <img src="e-images/jeans-water.svg" alt="image of hands holding water with text saying 9 trilliion">
+            <h2 class="bolded"><b>litres of water per year!</b></h2>
+        </div>
+
+        <h1>synthetic fabrics & chemicals in cheap dyes</h1>
+        <div class="flex flex-row spacingMargin">
+            <img src="e-images/red-shirt.svg" alt="t-shirt with 64% on it">
+            <p>of all fabrics are made of plastic</p>
+        </div>
+        <div class="flex flex-row spacingMargin">
+            <p>Just washing a batch of clothes can create 17 million microfibres</p>
+            <img src="e-images/water-drop.svg" alt="t-shirt with 64% on it">
+        </div>
+        <div class="flex flex-row spacingMargin">
+            <img src="e-images/fish.svg" alt="fish">
+            <p>Microfibres can be found in the air, rivers, drinking water, and the ocean</p>
+        </div>
+        <div class="flex flex-row spacingMargin">
+            <p>Cheaper price/quality dyes contain many different harsh toxins</p>
+            <img src="e-images/toxin.svg" alt="a toxic bottle">
+        </div>
 
 
 
