--- a/home.html
+++ b/home.html
@@ -216,8 +216,41 @@
             <p>Cheaper price/quality dyes contain many different harsh toxins</p>
             <img src="e-images/toxin.svg" alt="a toxic bottle">
         </div>
+<!-- ===================================================================================
+                section f: quiz 2 - synthetic fibres 
+                (images are in d-images folder)
+=====================================================================================-->
+        <div class="decompQues">
+            <section class="question flex-column flex" id="decompQuestion">
+                <h3 class="qHead">Approximately how many years do you think it takes for synthetic clothes to break down?</h3>
 
+                <div class="q_img">
+                    <img class="quizImg" src="d-images/icon_decompose.svg" alt="decomposed tee">
+                </div>
 
+                <div class ="flex-row flex options">
+                    <ul id="decom_options">
+                        <li>~50 Years</li>
+                        <li>~100 Years</li> 
+                        <li>~200 Years</li>
+                        <li>~500 Years</li>
+                    </ul>
+                </div>
+
+                <div id="correctAns2" class="correctAns off">Correct!</div>
+            </section> <!--water consumption question-->
+            
+            <section id="wrongAns2" class="wrongAns flex-column">
+                <h2 class="oops">Oops!<br>Wrong Answer,<br>Please Try Again!</h2>
+                <div>
+                    <img id="sad2" class="quizImg" src="d-images/info_girl_sad.svg" alt="wrong answer"/>
+                    <p class="click_me">Click me to try again!</p>
+                </div>
+            </section> <!--wrong answer-->
+        </div>
+        <!-- ===================================================================================
+                        section g: end of synthetic fibres + entire ending section
+        =====================================================================================-->
 
 
     </div>
