end section added

--- a/home.html
+++ b/home.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
 
         <title>Sustainability Infographic</title>
-        <link href="main.css" rel="stylesheet">
+        <link href="main.css" rel="stylesheet" type="text/css">
 
-        <link href="home.css" rel="stylesheet">
+        <link href="home.css" rel="stylesheet" type="text/css">
 
-        <link rel="stylesheet" href="sadGirl-section.css">
+        <link rel="stylesheet" href="sadGirl-section.css" type="text/css">
         <script src="sadgirl.js"></script>
 
         <link href="frame3.css" rel="stylesheet"> 
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="quiz.css" type="text/css">
         <script src="quiz.js"></script>
 
-
+        <link rel="stylesheet" href="lastpage.css" type="text/css">
 
         
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -251,7 +251,54 @@
         <!-- ===================================================================================
                         section g: end of synthetic fibres + entire ending section
         =====================================================================================-->
+        <img class="spacing" src="g-images/tshirt-dupes.svg">
+        <p class="boldText1">UP TO 200 YEARS</p>
+        <p>It takes up to 200 years to break down one piece of
+        synthetic clothing</p>
 
+        <div class="flex-row flex spacingMargin">
+            <img src="g-images/decomp-tshirt.svg" id="shrinkImage">
+            <p class="alignRight">It takes up to 200 years for synthetic 
+            clothings to break down</p>
+        </div>
+        
+        <div class="flex-row flex spacingMargin">
+            <p class="item">As for cotton clothing, it takes a few months if 
+                placed in the right compost.</p>
+            <img src="g-images/reycle-truck.svg">
+        </div>
 
+        <p class="boldText2">This could impact our <br>health if one were to <br>
+            breathe/consume a lot of <br> microfibers and toxins in <br>
+        their lifetime.</p>
+        <h1 class="spacing2">how to reduce <br>environmental <br>impact</h1>
+
+        <div class="world flex flex-column">
+            <img class="globeImage" src="g-images/globe.svg">
+            <img class="arrowImage" src="g-images/recycle.svg">
+        </div>
+
+        <div class="flex flex-column list">
+            <div class="spacingMargin">
+                <h2 class="bolded">1. buy clothes from <br>sustainable brands</h2>
+                <img id="lightbulb" src="g-images/lightbulb.svg">
+            </div>
+            <div class="spacingMargin">
+                <h2 class="bolded">2. buy clothes with <br>better quality</h2>
+                <img class="icon" src="g-images/medal.svg">
+            </div>
+            <div class="spacingMargin">
+                <h2 class="bolded">3. think twice <br>before throwing out<br>your clothes</h2>
+                <img class="icon" src="g-images/thinker.svg">
+            </div>
+            <div class="spacingMargin">
+                <h2 class="bolded">4. reduce the <br>amount of times you<br>do your laundry</h2>
+                <img class="icon" src="g-images/laundry.svg">
+            </div>
+            <h2 class="bolded biggerSpacing">And</h2>
+            <h1 class="biggerSpacing"><b>USE OUR<br>APP!</b></h1>
+            <img id="reVamp" src="g-images/revamp-girl.svg">
+            <h3 class="spacing5 bolded spacingMargin">Let's make the world a <br>better place!</h3>
+        </div>
     </div>
 </body>
