--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
         <img id="redarrow" src="a-images/red arrow.svg">
     </div>
         <div id="clothing-waste">
-            <h1>clothing waste</h1>
+            <h1 class="headerMargin">clothing waste</h1>
             <p id="sub-heading">in North America,</p>
         </div>
 
@@ -87,7 +87,7 @@
             <p id="percent" class="greyText">95%</p>
             <p>could have been</p>
         </div>
-        <div class="flex flex-row">
+        <div class="flex flex-row spacingMargin">
             <div class="flex flex-column">
                 <p class="slightBold">repurposed</p>
                 <img src="a-images/Repurpose icon.svg">
@@ -108,7 +108,7 @@
             <p>Fast fashion spreads a message that if you wear clothes that are out of season, 
                 it means you're our of style.</p>
             <div id="sadGirlSection" class="spacingMargin">
-                <div class="flex flex-row">
+                <div class="flex flex-row biggerSpacing">
                     <img class="thinkBubble" id="thinking" class="alignTopImg" src="b-images/thinking-bubble.svg" alt="thinking bubble">
                     <img class="sadGirl" src="b-images/sad-girl.svg" alt="sad girl">
                 </div>
@@ -124,7 +124,7 @@
 <!-- =============================================================
                 section c: start of water consumption section
 ===============================================================-->
-        <h1>water <br> consumption</h1>
+        <h1 class="headerMargin">water <br> consumption</h1>
         <div class="equalSection">
             <p>The amount of water <br>used to make a cotton <br> t-shirt:</p>
             <div class="flex flex-row spaceAround">
@@ -146,7 +146,7 @@
                 <h1 class="equalSign">=</h1>
                 <img src="c-images/girl-smile.svg">
             </div>
-            <h2>therefore...</h2>
+            <h2 class="bolded">therefore...</h2>
             <div class="flex flex-row lastDiv">
                 <p>The amount of <br>water used on <br>a cotton t-shirt <br>can help save 
                     many lives.</p>
@@ -199,7 +199,7 @@
             <h2 class="bolded"><b>litres of water per year!</b></h2>
         </div>
 
-        <h1>synthetic fabrics & chemicals in cheap dyes</h1>
+        <h1 class="headerMargin">synthetic fabrics & chemicals in cheap dyes</h1>
         <div class="flex flex-row spacingMargin">
             <img src="e-images/red-shirt.svg" alt="t-shirt with 64% on it">
             <p>of all fabrics are made of plastic</p>
@@ -251,7 +251,7 @@
         <!-- ===================================================================================
                         section g: end of synthetic fibres + entire ending section
         =====================================================================================-->
-        <img class="spacing" src="g-images/tshirt-dupes.svg">
+        <img src="g-images/tshirt-dupes.svg">
         <p class="boldText1">UP TO 200 YEARS</p>
         <p>It takes up to 200 years to break down one piece of
         synthetic clothing</p>
@@ -271,7 +271,7 @@
         <p class="boldText2">This could impact our <br>health if one were to <br>
             breathe/consume a lot of <br> microfibers and toxins in <br>
         their lifetime.</p>
-        <h1 class="spacing2">how to reduce <br>environmental <br>impact</h1>
+        <h1 class="headerMargin">how to reduce <br>environmental <br>impact</h1>
 
         <div class="world flex flex-column">
             <img class="globeImage" src="g-images/globe.svg">
