fixed section b's js file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <link href="css/home.css" rel="stylesheet" type="text/css">
 
         <link href="css/sadGirl-section.css" rel="stylesheet" type="text/css">
-        <script src="js/sadgirl.js"></script>
+        <!-- <script src="js/sadgirl.js"></script>  --> 
+        <!-- this script is placed at the end of section b -->
 
         <link href="css/frame3.css" rel="stylesheet"> 
 
@@ -122,6 +123,8 @@
             <p>This encourages people to shop at fast fashion stores to buy the most up to date clothes,
                 and to discard their older items.</p>
         </div>
+
+        <script src="js/sadgirl.js"></script>
 <!-- =============================================================
                 section c: start of water consumption section
 ===============================================================-->
