--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <!-- ? -->
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="js/thread.js"></script>
     
     </head>
 </html>
@@ -40,8 +41,14 @@
             <p class="slogan">THE IMPACT OF</p>
             <img src="images/a-images/fastfashion.svg">
             <p class="slogan">ON OUR ENVIRONMENT</p>
-            <img id="scrollarrows" src="images/a-images/scroll.svg">
-            <p>Scroll Down</p>
+        </div>
+        <div id="container">
+            <div class="scrollarrow"></div>
+            <div class="scrollarrow"></div>
+            <div class="scrollarrow"></div>
+        </div>
+        <div id="scroll-text">
+        <span>Scroll Down</span>
         </div>
 
 
@@ -64,7 +71,7 @@
             <img id="pile" src="images/a-images/pileofclothess.svg">
         </div>
         <div class="flex flex-row" id="thread">
-            <img src="images/a-images/thread roll.svg">
+            <img id="thread-click" onclick="makeVisible()" src="images/a-images/thread roll.svg">
         <div id="unwindinfo">
             <p id="unwind">Click the thread to unwind information</p>
         </div>
@@ -72,11 +79,18 @@
     <div id="arrow">
         <img id="redarrow" src="images/a-images/red arrow.svg">
     </div>
+
+      <!-- ====================================================================================
+                section b: main div, originally hidden
+        ======================================================================================-->
+
+    <div id="big-div">
         <div id="clothing-waste">
             <h1 class="headerMargin">clothing waste</h1>
             <p id="sub-heading">in North America,</p>
         </div>
 
+        
         <div id="garbage" class="flex flex-row">
                 <img src="images/a-images/clothing garbage illustration.svg">
                 <div class="flex-column">
@@ -92,7 +106,7 @@
         <div class="flex flex-row spacingMargin">
             <div class="flex flex-column">
                 <p class="slightBold">repurposed</p>
-                <img src="images/a-images/Repurpose icon.svg">
+                <img src="images/a-images/repurpose.svg>
             </div>
             <div id="or-text">
                 <p id="or">or</p>
@@ -304,5 +318,6 @@
             <img id="reVamp" src="images/g-images/revamp-girl.svg">
             <h3 class="spacing5 bolded spacingMargin">Let's make the world a <br>better place!</h3>
         </div>
+    </div>
     </div>
 </body>
