trying to get the gradient working lol

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <!-- ====================================================================================
                 section a: starting page + beginning of clothing waste section
 ======================================================================================-->
+    <div id="gradient" class="flex flex-column">
         <div id="frontpage" class="flex flex-column">
             <img id="logoimg" src="images/a-images/recycle-logo.svg">
             <p class="slogan">THE IMPACT OF</p>
@@ -78,6 +79,7 @@
     </div>
     <div id="arrow">
         <img id="redarrow" src="images/a-images/red arrow.svg">
+    </div>
     </div>
 
       <!-- ====================================================================================
