final commit with gradient added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <!-- ? -->
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script src="js/thread.js"></script>
     
     </head>
 </html>
@@ -72,7 +71,7 @@
             <img id="pile" src="images/a-images/pileofclothess.svg">
         </div>
         <div class="flex flex-row" id="thread">
-            <img id="thread-click" onclick="makeVisible()" src="images/a-images/thread roll.svg">
+            <img id="thread-click" src="images/a-images/thread roll.svg">
         <div id="unwindinfo">
             <p id="unwind">Click the thread to unwind information</p>
         </div>
@@ -81,6 +80,8 @@
         <img id="redarrow" src="images/a-images/red arrow.svg">
     </div>
     </div>
+    <script src="js/thread.js"></script>
+
 
       <!-- ====================================================================================
                 section b: main div, originally hidden
@@ -108,7 +109,7 @@
         <div class="flex flex-row spacingMargin">
             <div class="flex flex-column">
                 <p class="slightBold">repurposed</p>
-                <img src="images/a-images/repurpose.svg>
+                <img src="images/a-images/repurpose.svg">
             </div>
             <div id="or-text">
                 <p id="or">or</p>
