thread roll adjustment pt ?????

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="flex flex-row" id="thread">
             <img id="thread-click" src="images/a-images/thread roll.svg">
             <div id="unwindinfo">
-                <p id="unwind">Click the thread to unwind information</p>
+                <p id="unwind">Double click the thread to unwind information</p>
             </div>
         </div>
         
